Revision history for Set::Similarity

{{$NEXT}}

0.04  2016-11-21 07:51:29 CET
       - no warnings 'portable'

0.03  2016-11-21 06:43:00 CET
       - improve test coverage

0.02  2016-11-21 01:11:35 CET
       - dependency 'parent'
       - doc improvement

0.01  2016-11-20 23:10:20 CET
       - Initial release.